# valdo-gtk

./: meson.build
src/: Application.vala  FormListItem.vala  ListItem.vala  MainWindow.vala  PageProjects.vala  PageTemplates.vala  PageVariables.vala  PreferencesWindow.vala  meson.build
ui/: meson.build  valdo-gtk.gresource.xml
